fixes alignment of home buttons on iphone

--- a/client/app/src/modules/public/home/_home.scss
+++ b/client/app/src/modules/public/home/_home.scss
@@ -2,7 +2,7 @@
   color: white;
   position: relative;
   text-align: center;
-  padding: 30px 60px;
+  padding: 60px 20px;
   max-width: 650px;
   margin: 0 auto;
 }
